--- a/.env.sample
+++ b/.env.sample
@@ -2,4 +2,5 @@ NODE_ENV=development
 LOG_LEVEL=debug
 PORT=3000
 API_PREFIX=api
-FRONTEND_URL=http://localhost:5173
+CORS_ALLOWED_ORIGINS=http://localhost:5173,http://localhost:4173
+DATA_DIR=/path/to/data
