--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "test:e2e": "jest --config ./test/jest-e2e.json"
   },
   "dependencies": {
+    "@gmjs/fs-async": "^0.0.5",
     "@gmjs/number-util": "^0.0.1",
     "@nestjs/common": "^10.2.6",
     "@nestjs/core": "^10.2.6",
