--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
   },
   "type": "commonjs",
   "scripts": {
-    "build": "shx rm -rf ./dist && nest build",
+    "build": "shx rm -rf ./dist && shx mkdir ./dist && shx cp -R ./data ./dist/data && nest build",
     "format": "prettier --write .",
     "start": "nest start",
     "start:dev": "nest start --watch",
@@ -28,11 +28,17 @@
     "test:e2e": "jest --config ./test/jest-e2e.json"
   },
   "dependencies": {
+    "@gmjs/apply-function": "^0.0.1",
+    "@gmjs/assert": "^0.0.2",
+    "@gmjs/compose-function": "^0.0.1",
+    "@gmjs/data-container-util": "^0.0.1",
     "@gmjs/fs-async": "^0.0.5",
     "@gmjs/number-util": "^0.0.1",
+    "@gmjs/value-transformers": "^0.0.4",
     "@nestjs/common": "^10.2.6",
     "@nestjs/core": "^10.2.6",
     "@nestjs/platform-express": "^10.2.6",
+    "ajv": "^8.12.0",
     "cookie-parser": "^1.4.6",
     "dotenv": "^16.3.1",
     "helmet": "^7.0.0",
