--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@gmjs/gm-trading-be",
-  "version": "0.0.1",
+  "version": "0.0.2",
   "description": "gm-trading-be",
   "private": true,
   "author": {
@@ -33,15 +33,21 @@
     "@gmjs/compose-function": "^0.0.1",
     "@gmjs/data-container-util": "^0.0.1",
     "@gmjs/fs-async": "^0.0.5",
+    "@gmjs/fs-observable": "^0.0.1",
+    "@gmjs/fs-shared": "^0.0.3",
+    "@gmjs/gm-trading-shared": "^0.0.9",
     "@gmjs/number-util": "^0.0.1",
+    "@gmjs/path": "^0.0.2",
     "@gmjs/value-transformers": "^0.0.4",
     "@nestjs/common": "^10.2.6",
     "@nestjs/core": "^10.2.6",
     "@nestjs/platform-express": "^10.2.6",
+    "@types/luxon": "^3.3.2",
     "ajv": "^8.12.0",
     "cookie-parser": "^1.4.6",
     "dotenv": "^16.3.1",
     "helmet": "^7.0.0",
+    "luxon": "^3.4.3",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.8.1",
     "tslib": "^2.6.2",
