--- a/package.json
+++ b/package.json
@@ -35,59 +35,59 @@
     "@gmjs/fs-async": "^0.0.5",
     "@gmjs/fs-observable": "^0.0.1",
     "@gmjs/fs-shared": "^0.0.3",
-    "@gmjs/gm-trading-shared": "^0.0.14",
+    "@gmjs/gm-trading-shared": "^0.0.15",
     "@gmjs/number-util": "^0.0.1",
     "@gmjs/path": "^0.0.2",
     "@gmjs/value-transformers": "^0.0.4",
-    "@nestjs/common": "^10.2.6",
-    "@nestjs/core": "^10.2.6",
-    "@nestjs/platform-express": "^10.2.6",
-    "@types/luxon": "^3.3.2",
+    "@nestjs/common": "^10.2.10",
+    "@nestjs/core": "^10.2.10",
+    "@nestjs/platform-express": "^10.2.10",
+    "@types/luxon": "^3.3.5",
     "ajv": "^8.12.0",
     "cookie-parser": "^1.4.6",
     "dotenv": "^16.3.1",
-    "helmet": "^7.0.0",
-    "luxon": "^3.4.3",
+    "helmet": "^7.1.0",
+    "luxon": "^3.4.4",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.8.1",
     "tslib": "^2.6.2",
-    "zod": "^3.22.2"
+    "zod": "^3.22.4"
   },
   "devDependencies": {
     "@gmjs/array-sort": "^0.0.2",
-    "@gmjs/eslint-config": "^0.0.24",
-    "@gmjs/jest-config": "^0.0.6",
+    "@gmjs/eslint-config": "^0.0.27",
+    "@gmjs/jest-config": "^0.0.7",
     "@gmjs/prettier-config": "^1.0.45",
     "@gmjs/tsconfig": "^1.0.9",
     "@jest/globals": "^29.7.0",
-    "@nestjs/cli": "^10.1.18",
-    "@nestjs/schematics": "^10.0.2",
-    "@nestjs/testing": "^10.2.6",
-    "@types/cookie-parser": "^1.4.4",
-    "@types/eslint": "^8.44.3",
-    "@types/express": "^4.17.18",
-    "@types/node": "^20.6.4",
-    "@types/supertest": "^2.0.12",
-    "@typescript-eslint/eslint-plugin": "^6.7.2",
-    "@typescript-eslint/parser": "^6.7.2",
-    "eslint": "^8.50.0",
+    "@nestjs/cli": "^10.2.1",
+    "@nestjs/schematics": "^10.0.3",
+    "@nestjs/testing": "^10.2.10",
+    "@types/cookie-parser": "^1.4.6",
+    "@types/eslint": "^8.44.7",
+    "@types/express": "^4.17.21",
+    "@types/node": "^20.10.0",
+    "@types/supertest": "^2.0.16",
+    "@typescript-eslint/eslint-plugin": "^6.12.0",
+    "@typescript-eslint/parser": "^6.12.0",
+    "eslint": "^8.54.0",
     "eslint-config-prettier": "^9.0.0",
     "eslint-import-resolver-typescript": "^3.6.1",
-    "eslint-plugin-import": "^2.28.1",
-    "eslint-plugin-n": "^16.1.0",
-    "eslint-plugin-prettier": "^5.0.0",
-    "eslint-plugin-unicorn": "^48.0.1",
+    "eslint-plugin-import": "^2.29.0",
+    "eslint-plugin-n": "^16.3.1",
+    "eslint-plugin-prettier": "^5.0.1",
+    "eslint-plugin-unicorn": "^49.0.0",
     "jest": "^29.7.0",
-    "prettier": "^3.0.3",
+    "prettier": "^3.1.0",
     "shx": "^0.3.4",
     "source-map-support": "^0.5.21",
     "supertest": "^6.3.3",
     "ts-jest": "^29.1.1",
-    "ts-loader": "^9.4.4",
+    "ts-loader": "^9.5.1",
     "ts-node": "^10.9.1",
     "tsconfig-paths": "^4.2.0",
-    "type-fest": "^4.3.1",
-    "typescript": "^5.2.2"
+    "type-fest": "^4.8.2",
+    "typescript": "~5.2.2"
   },
   "engines": {
     "node": ">=18.17.0"
