--- a/package.json
+++ b/package.json
@@ -87,7 +87,7 @@
     "ts-node": "^10.9.1",
     "tsconfig-paths": "^4.2.0",
     "type-fest": "^4.8.3",
-    "typescript": "~5.2.2"
+    "typescript": "^5.2.2"
   },
   "engines": {
     "node": ">=18.17.0"
