--- a/.env.sample
+++ b/.env.sample
@@ -3,4 +3,4 @@ LOG_LEVEL=debug
 PORT=3000
 API_PREFIX=api
 CORS_ALLOWED_ORIGINS=http://localhost:5173,http://localhost:4173
-DATA_DIR=/path/to/data
+TD365_DATA_DIR=/path/to/data
