--- a/package.json
+++ b/package.json
@@ -29,20 +29,20 @@
   },
   "dependencies": {
     "@gmjs/apply-function": "^0.0.3",
-    "@gmjs/assert": "^0.0.2",
+    "@gmjs/assert": "^0.0.5",
     "@gmjs/compose-function": "^0.0.2",
     "@gmjs/data-container-util": "^0.0.1",
+    "@gmjs/date-util": "^0.0.5",
     "@gmjs/fs-async": "^0.0.5",
     "@gmjs/fs-observable": "^0.0.1",
     "@gmjs/fs-shared": "^0.0.3",
-    "@gmjs/gm-trading-shared": "^0.0.18",
+    "@gmjs/gm-trading-shared": "^0.0.20",
     "@gmjs/number-util": "^0.0.3",
     "@gmjs/path": "^0.0.2",
     "@gmjs/value-transformers": "^0.0.7",
     "@nestjs/common": "^10.3.0",
     "@nestjs/core": "^10.3.0",
     "@nestjs/platform-express": "^10.3.0",
-    "@types/luxon": "^3.3.7",
     "ajv": "^8.12.0",
     "cookie-parser": "^1.4.6",
     "dotenv": "^16.3.1",
@@ -66,6 +66,7 @@
     "@types/cookie-parser": "^1.4.6",
     "@types/eslint": "^8.56.0",
     "@types/express": "^4.17.21",
+    "@types/luxon": "^3.3.7",
     "@types/node": "^20.10.6",
     "@types/supertest": "^6.0.2",
     "@typescript-eslint/eslint-plugin": "^6.16.0",
