--- a/package.json
+++ b/package.json
@@ -36,7 +36,8 @@
     "@gmjs/fs-async": "^0.0.5",
     "@gmjs/fs-observable": "^0.0.1",
     "@gmjs/fs-shared": "^0.0.3",
-    "@gmjs/gm-trading-shared": "^0.0.21",
+    "@gmjs/generic-types": "^0.0.1",
+    "@gmjs/gm-trading-shared": "^0.0.22",
     "@gmjs/number-util": "^0.0.3",
     "@gmjs/path": "^0.0.2",
     "@gmjs/value-transformers": "^0.0.7",
