--- a/.env.sample
+++ b/.env.sample
@@ -4,3 +4,8 @@ PORT=3000
 API_PREFIX=api
 CORS_ALLOWED_ORIGINS=http://localhost:5173,http://localhost:4173
 TD365_DATA_DIR=/path/to/data
+DB_HOST=localhost
+DB_PORT=3306
+DB_USER=username
+DB_PASSWORD=password
+DB_NAME=gm_trading
