--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "dotenv": "^16.3.1",
     "helmet": "^7.1.0",
     "luxon": "^3.4.4",
+    "mysql2": "^3.7.1",
     "reflect-metadata": "^0.2.1",
     "rxjs": "^7.8.1",
     "tslib": "^2.6.2",
