--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "@nestjs/core": "^10.3.1",
     "@nestjs/platform-express": "^10.3.1",
     "ajv": "^8.12.0",
+    "ajv-formats": "^2.1.1",
     "cookie-parser": "^1.4.6",
     "dotenv": "^16.4.1",
     "helmet": "^7.1.0",
